fix scrollbar, stages-nav, margins

--- a/src/sass/components/_home_projects.sass
+++ b/src/sass/components/_home_projects.sass
@@ -87,10 +87,10 @@
         border-right: none
         border-top: none
   .swiper-container
-    padding-bottom: 60px
+    padding-bottom: 135px
   .swiper-scrollbar
     border-radius: 0
-    max-width: 400px
+    max-width: 500px
     left: 50%
     transform: translateX(-50%)
     height: 10px
