--- a/src/sass/components/_home_services.sass
+++ b/src/sass/components/_home_services.sass
@@ -1,5 +1,5 @@
 .services
-  padding: 110px 0 110px
+  padding: 100px 0 120px
   &__slider
     max-width: 95%
     margin: 90px auto 0
@@ -29,7 +29,7 @@
     margin-left: 5%
     img
       &.image-letter
-        max-width: 500px
+        max-width: 550px
         width: 90%
         height: auto
       &.image-obj
