--- a/src/sass/components/_slider-nav.sass
+++ b/src/sass/components/_slider-nav.sass
@@ -4,7 +4,7 @@
   align-items: center
   justify-content: center
   width: 100%
-  margin-top: 50px
+  margin-top: 40px
   &__link
     font-size: 24px
     font-weight: 300
